AED-75 Uploading assays and projects api endpoints to github
