# openapi/paths/v20/data.yml
@@ -333,6 +333,22 @@
     tags:
       - Lithology metadata
       - v2.0
+/v2.0/data/datasets/{datasetid}/assays:
+  get:
+    description: Returns the aeDNA assays (and their sequencing libraries) linked to a dataset.
+    parameters:
+      - $ref: '#/components/parameters/datasetidPath'
+    responses:
+      '200':
+        content:
+          application/json:
+            schema:
+              type: object
+        description: Assays
+    summary: aeDNA assay and library metadata for a dataset.
+    tags:
+      - Assay metadata
+      - v2.0
 /v2.0/data/datasets/{datasetid}/projects:
   get:
     description: Returns the research projects (and their participants) linked to a dataset.
